# freespeak

./: .gitignore  README.md  launch.sh  pyproject.toml  tasks.md
.cursor/rules/: task-lists.mdc
languagetool/: docker-compose.yml
scripts/: toggle-mic.sh
src/: dbus_service.py  langtool.py  logger_config.py  main.py  overlay.py  transcriber.py  window.py
web/: index.html
web/css/: style.css
web/js/: audio.js  main.js  vad.js
